* NEXT
- Add temporary highlighting of acted upon target.
- Expose ~cursorfree-to-action~ and ~cursorfree-to-modifier~ for
  creating custom actions and modifiers.
- Fix bugs in "inside" and "outside" commands.
- Add modifiers:
  - "leftline": Select everything to the left of the target on the
    same line.
  - "rightline": Select everything to the right of the target on the
    same line.
  - "block": Select the paragraph containing the target.
  - "link": Select the URI containing the target.
  - "everything": Add a target spanning the full buffer.
- Add actions:
  - "flash": Temporarily highlight a given target.  Useful for testing
    new modifiers.
  - "help": Display local help, e.g. as provided by flymake.
- Copying strings now does not copy properties.  Previously, this
  caused issues when copying readonly parts of the buffer.

* 0.1.0 [2025-01-23 Thu]
- Fix issues causing the package not to function.
- Add "line" modifier.
- Add "outside" modifier.
- Make "past" postfix.

* 0.0.0 [2024-12-29 Sun]
Initial release